Fixed squish

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -100,7 +100,6 @@ td img {
     border: 1px solid;
     display: inline-block;
     width: 40%;
-    height: 350px;
 }
 
 section>img {
